tests/ui/parser/removed-syntax/removed-syntax-enum-newtype.rs
enum e = isize; //~ ERROR expected one of `<`, `where`, or `{`, found `=`
